// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimeInput /> 12h matches the snapshot 1`] = `
<WithStyles(TimeInput)
  defaultValue={2017-10-15T13:37:00.000Z}
  mode="12h"
>
  <TimeInput
    autoOk={false}
    cancelLabel="Cancel"
    classes={
      Object {
        "body": "TimeInput-body-2",
        "header": "TimeInput-header-1",
      }
    }
    defaultValue={2017-10-15T13:37:00.000Z}
    minutesStep={1}
    mode="12h"
    okLabel="Ok"
    selectOnClose={false}
    updateImmediately={false}
  >
    <WithStyles(Input)
      classes={
        Object {
          "input": undefined,
        }
      }
      disabled={false}
      key="TimeInput-input"
      onClick={[Function]}
      readOnly={true}
      value="1:37 pm"
    >
      <Input
        classes={
          Object {
            "disabled": "MuiInput-disabled-6",
            "error": "MuiInput-error-8",
            "focused": "MuiInput-focused-5",
            "formControl": "MuiInput-formControl-4",
            "fullWidth": "MuiInput-fullWidth-10",
            "input": "MuiInput-input-11",
            "inputMarginDense": "MuiInput-inputMarginDense-12",
            "inputMultiline": "MuiInput-inputMultiline-13",
            "inputType": "MuiInput-inputType-14",
            "inputTypeSearch": "MuiInput-inputTypeSearch-15",
            "multiline": "MuiInput-multiline-9",
            "root": "MuiInput-root-3",
            "underline": "MuiInput-underline-7",
          }
        }
        disableUnderline={false}
        disabled={false}
        fullWidth={false}
        multiline={false}
        onClick={[Function]}
        readOnly={true}
        type="text"
        value="1:37 pm"
      >
        <div
          className="MuiInput-root-3 MuiInput-underline-7"
          onClick={[Function]}
        >
          <input
            className="MuiInput-input-11"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="text"
            value="1:37 pm"
          />
        </div>
      </Input>
    </WithStyles(Input)>
    <WithStyles(Dialog)
      key="TimeInput-dialog"
      maxWidth="xs"
      onClose={[Function]}
      open={false}
    >
      <Dialog
        TransitionComponent={[Function]}
        classes={
          Object {
            "paper": "MuiDialog-paper-17",
            "paperFullScreen": "MuiDialog-paperFullScreen-22",
            "paperFullWidth": "MuiDialog-paperFullWidth-21",
            "paperWidthMd": "MuiDialog-paperWidthMd-20",
            "paperWidthSm": "MuiDialog-paperWidthSm-19",
            "paperWidthXs": "MuiDialog-paperWidthXs-18",
            "root": "MuiDialog-root-16",
          }
        }
        disableBackdropClick={false}
        disableEscapeKeyDown={false}
        fullScreen={false}
        fullWidth={false}
        maxWidth="xs"
        onClose={[Function]}
        open={false}
        transitionDuration={
          Object {
            "enter": 225,
            "exit": 195,
          }
        }
      >
        <WithStyles(Modal)
          BackdropProps={
            Object {
              "transitionDuration": Object {
                "enter": 225,
                "exit": 195,
              },
            }
          }
          className="MuiDialog-root-16"
          disableBackdropClick={false}
          disableEscapeKeyDown={false}
          onClose={[Function]}
          open={false}
          role="dialog"
        >
          <Modal
            BackdropComponent={[Function]}
            BackdropProps={
              Object {
                "transitionDuration": Object {
                  "enter": 225,
                  "exit": 195,
                },
              }
            }
            className="MuiDialog-root-16"
            classes={
              Object {
                "hidden": "MuiModal-hidden-24",
                "root": "MuiModal-root-23",
              }
            }
            disableAutoFocus={false}
            disableBackdropClick={false}
            disableEnforceFocus={false}
            disableEscapeKeyDown={false}
            disableRestoreFocus={false}
            hideBackdrop={false}
            keepMounted={false}
            manager={
              ModalManager {
                "containers": Array [],
                "data": Array [],
                "handleContainerOverflow": true,
                "hideSiblingNodes": true,
                "modals": Array [],
              }
            }
            onClose={[Function]}
            open={false}
            role="dialog"
          />
        </WithStyles(Modal)>
      </Dialog>
    </WithStyles(Dialog)>
  </TimeInput>
</WithStyles(TimeInput)>
`;

exports[`<TimeInput /> 24h matches the snapshot 1`] = `
<WithStyles(TimeInput)
  defaultValue={2017-10-15T13:37:00.000Z}
  mode="24h"
>
  <TimeInput
    autoOk={false}
    cancelLabel="Cancel"
    classes={
      Object {
        "body": "TimeInput-body-2",
        "header": "TimeInput-header-1",
      }
    }
    defaultValue={2017-10-15T13:37:00.000Z}
    minutesStep={1}
    mode="24h"
    okLabel="Ok"
    selectOnClose={false}
    updateImmediately={false}
  >
    <WithStyles(Input)
      classes={
        Object {
          "input": undefined,
        }
      }
      disabled={false}
      key="TimeInput-input"
      onClick={[Function]}
      readOnly={true}
      value="13:37"
    >
      <Input
        classes={
          Object {
            "disabled": "MuiInput-disabled-6",
            "error": "MuiInput-error-8",
            "focused": "MuiInput-focused-5",
            "formControl": "MuiInput-formControl-4",
            "fullWidth": "MuiInput-fullWidth-10",
            "input": "MuiInput-input-11",
            "inputMarginDense": "MuiInput-inputMarginDense-12",
            "inputMultiline": "MuiInput-inputMultiline-13",
            "inputType": "MuiInput-inputType-14",
            "inputTypeSearch": "MuiInput-inputTypeSearch-15",
            "multiline": "MuiInput-multiline-9",
            "root": "MuiInput-root-3",
            "underline": "MuiInput-underline-7",
          }
        }
        disableUnderline={false}
        disabled={false}
        fullWidth={false}
        multiline={false}
        onClick={[Function]}
        readOnly={true}
        type="text"
        value="13:37"
      >
        <div
          className="MuiInput-root-3 MuiInput-underline-7"
          onClick={[Function]}
        >
          <input
            className="MuiInput-input-11"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="text"
            value="13:37"
          />
        </div>
      </Input>
    </WithStyles(Input)>
    <WithStyles(Dialog)
      key="TimeInput-dialog"
      maxWidth="xs"
      onClose={[Function]}
      open={false}
    >
      <Dialog
        TransitionComponent={[Function]}
        classes={
          Object {
            "paper": "MuiDialog-paper-17",
            "paperFullScreen": "MuiDialog-paperFullScreen-22",
            "paperFullWidth": "MuiDialog-paperFullWidth-21",
            "paperWidthMd": "MuiDialog-paperWidthMd-20",
            "paperWidthSm": "MuiDialog-paperWidthSm-19",
            "paperWidthXs": "MuiDialog-paperWidthXs-18",
            "root": "MuiDialog-root-16",
          }
        }
        disableBackdropClick={false}
        disableEscapeKeyDown={false}
        fullScreen={false}
        fullWidth={false}
        maxWidth="xs"
        onClose={[Function]}
        open={false}
        transitionDuration={
          Object {
            "enter": 225,
            "exit": 195,
          }
        }
      >
        <WithStyles(Modal)
          BackdropProps={
            Object {
              "transitionDuration": Object {
                "enter": 225,
                "exit": 195,
              },
            }
          }
          className="MuiDialog-root-16"
          disableBackdropClick={false}
          disableEscapeKeyDown={false}
          onClose={[Function]}
          open={false}
          role="dialog"
        >
          <Modal
            BackdropComponent={[Function]}
            BackdropProps={
              Object {
                "transitionDuration": Object {
                  "enter": 225,
                  "exit": 195,
                },
              }
            }
            className="MuiDialog-root-16"
            classes={
              Object {
                "hidden": "MuiModal-hidden-24",
                "root": "MuiModal-root-23",
              }
            }
            disableAutoFocus={false}
            disableBackdropClick={false}
            disableEnforceFocus={false}
            disableEscapeKeyDown={false}
            disableRestoreFocus={false}
            hideBackdrop={false}
            keepMounted={false}
            manager={
              ModalManager {
                "containers": Array [],
                "data": Array [],
                "handleContainerOverflow": true,
                "hideSiblingNodes": true,
                "modals": Array [],
              }
            }
            onClose={[Function]}
            open={false}
            role="dialog"
          />
        </WithStyles(Modal)>
      </Dialog>
    </WithStyles(Dialog)>
  </TimeInput>
</WithStyles(TimeInput)>
`;
